src/snapshots/ebnf__token__test__get_simple_token.snap
---
source: src/token.rs
expression: result
---
- regex: a
  annotation:
    name: ""
- regex: b
  annotation:
    name: ""

