src/snapshots/ebnf__token__test__simple_token.snap
---
source: src/token.rs
expression: result
---
expressions:
  - lhs: filter
    rhs:
      Alternation:
        - NonTerminal:
            - a
            - name: ""
        - NonTerminal:
            - b
            - name: ""
        - name: ""
  - lhs: a
    rhs:
      Terminal:
        - regex: a
          annotation:
            name: ""
        - name: ""
  - lhs: b
    rhs:
      Terminal:
        - regex: b
          annotation:
            name: ""
        - name: ""

